--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
     "next-auth": "^5.0.0-beta.30",
-    "react": "19.2.0",
+    "react": "^19.2.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.67.0",
     "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.0.6",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
